# FiguraClassifier

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/ups/vision/clasificador_app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: dataset.csv
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/ups/vision/clasificador_app/: DrawingView.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/ups/vision/clasificador_app/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
